Convert to AD and relayout the flasher

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 gbcflsh_1.1_libftdi/build
 gbcflsh_1.1_libftdi/release
 gbcflsh_1.1_libftdi/Makefile
+altium/Mega8515_flasher_v2.PrjPcb/History/
+altium/Mega8515_flasher_v2.PrjPcb/Project Logs for Mega8515_flasher_v2/
+altium/Mega8515_flasher_v2.PrjPcb/__Previews/
+altium/simpleROM.PrjPcb/History/
+altium/simpleROM.PrjPcb/Project Logs for simpleROM/
+altium/simpleROM.PrjPcb/__Previews/
